homelab/terraform/modules/monitoring/templates/virtual_service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ${ name }
  namespace: ${ namespace }
  labels:
    app: ${ name }
    service: http

spec:
  gateways:
    - ${ gateway }
  hosts:
    - ${ hostname }
  http:
    - route:
        - destination:
            host: ${ service_name }
            port:
              number: 80
